# Astro-Session-Manager

./: .gitignore  CLAUDE.md  README.md  electron-builder.yml  electron.vite.config.ts  index.html  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html
docs/plans/: 2026-03-07-median-fwhm-design.md
old app/: electron-builder.yml  tsconfig.web.json
old app/src/main/: index.ts
old app/src/renderer/: index.html
public/d3-celestial-data/: celestial.js
scripts/: install-sharp-platform.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  cache.rs  cancellation.rs  commands.rs  converter.rs  dslr_parser.rs  fits_parser.rs  fits_preview.rs  fits_writer.rs  lib.rs  masters.rs  preview_queue.rs  scanner.rs  settings.rs  thumbnail.rs  types.rs  xisf_parser.rs
src/context/: ThemeContext.tsx
src/hooks/: useImportQueue.ts  useProjects.ts  useThumbnail.ts  useThumbnailQueue.ts
src/lib/: constants.ts  dslrUtils.ts  formatters.ts  healpix.ts  hips.ts  previewQueue.ts  skymap.ts  weather.ts
src/main/: window.ts
src/main/ipc/: index.ts  (+6 more)
src/preload/: index.ts
src/renderer/: index.html
src/routes/: Converter.tsx  Dashboard.tsx  FitsDetailView.tsx  MastersLibrary.tsx  ProjectView.tsx  SessionView.tsx  Settings.tsx  SkyMap.tsx  Weather.tsx
src/store/: appStore.ts
src/styles/: converter.css  global.css  skymap.css  weather.css
src/types/: celestial.d.ts  fits.ts  index.ts  masters.ts  project.ts  settings.ts
(+29 files in other folders)
