[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
tauri = { version = "2.10.0", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
sha2 = "0.10"
hex = "0.4"
image = "0.25"
walkdir = "2"
trash = "5"
regex = "1"
dirs = "5"
chrono = "0.4"
base64 = "0.22"
tokio = { version = "1", features = ["sync"] }
rustafits = "0.6"
rayon = "1"
nom-exif = "2"
rawler = "0.7"
